--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: Terraform Apply
+name: 🛰️Terraform
 on:
   push:
     branches:
@@ -10,6 +10,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install 1Password CLI
+        uses: 1password/install-cli-action@v1
+
+      - name: Load credentials
+        uses: 1password/load-secrets-action@v1
+        with:
+          export-env: true
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+          OCID: "op://git/ORACLE/OCID"
+          REGION: "op://git/ORACLE/region"
       - name: "Install OCI CLI"
         run: |
           mkdir ~/.oci
@@ -33,4 +44,4 @@ jobs:
       - name: "Terraform init"
         run: terraform init
       - name: "Terraform apply"
-        run: terraform apply -auto-approve -var COMPARTMENT_ID="${{secrets.TF_VAR_COMPARTMENT_ID}}" -var REGION="${{secrets.TF_VAR_REGION}}"
+        run: terraform apply -auto-approve -var COMPARTMENT_ID="${{env.OCID}}" -var REGION="${{env.REGION}}"
