--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,15 +1,15 @@
 name: 🛰️Terraform
 on:
-  push:
-    branches:
-      - main
+  #push:
+   # branches:
+  #    - main
   workflow_dispatch:
 jobs:
   apply:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Install 1Password CLI
         uses: 1password/install-cli-action@v1
 
@@ -20,7 +20,9 @@ jobs:
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
           OCID: "op://git/ORACLE/OCID"
-          REGION: "op://git/ORACLE/region"
+          OCI_REGION: "op://git/ORACLE/OCI_REGION"
+          OCI_CONFIG: "op://git/ORACLE/OCI_CONFIG"
+          OCI_KEY_FILE: "op://git/ORACLE/OCI_KEY_FILE" 
       - name: "Install OCI CLI"
         run: |
           mkdir ~/.oci
@@ -44,4 +46,4 @@ jobs:
       - name: "Terraform init"
         run: terraform init
       - name: "Terraform apply"
-        run: terraform apply -auto-approve -var COMPARTMENT_ID="${{env.OCID}}" -var REGION="${{env.REGION}}"
+        run: terraform apply -auto-approve -var COMPARTMENT_ID="${{env.OCID}}" -var REGION="${{env.OCI_REGION}}"
