--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,8 +8,6 @@ jobs:
   apply:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: Install 1Password CLI
         uses: 1password/install-cli-action@v1
 
@@ -43,7 +41,9 @@ jobs:
           echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
           sudo apt-get update
           sudo apt-get install terraform
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: "Terraform init"
-        run: terraform init
+        run: terraform -chdir=/cloudops/oracle init
       - name: "Terraform apply"
-        run: terraform apply -auto-approve -var COMPARTMENT_ID="${{env.OCID}}" -var REGION="${{env.OCI_REGION}}"
+        run: terraform -chdir=/cloudops/oracle apply -auto-approve -var COMPARTMENT_ID="${{env.OCID}}" -var REGION="${{env.OCI_REGION}}"
